# actix-responder-macro

./: Cargo.toml  README.md
panics/: panics_on_invalid_meta_attr.rs  panics_on_invalid_meta_attr.stderr  panics_on_unsupported_attr.rs  panics_on_unsupported_attr.stderr
src/: lib.rs
tests/: it_panics_on_invalid_attr.rs  it_works_handler.rs  it_works_with_default_builder.rs  it_works_with_default_meta_attr_value.rs  it_works_without_meta_attr.rs  panics_on_invalid_meta_attr.rs
tests/ui/: panics_on_invalid_meta_attr.rs  panics_on_invalid_meta_attr.stderr  panics_on_unsupported_attr.stderr
